feat: ✨ Complete UI/UX redesign and modernization
🎨 Design Improvements:
- Added modern gradient background with glassmorphism effects
- Implemented responsive grid layout for repository cards
- Enhanced typography with system font stack
- Added smooth animations and hover effects

📊 New Features:
- Statistics dashboard showing repository metrics
- Rich repository cards with metadata (stars, forks, language, dates)
- Loading animations with spinner
- Error handling and empty states
- Language color indicators
- Accessibility improvements with ARIA labels

🛠 Technical Enhancements:
- Added Volta configuration for Node.js and Yarn versions
- Created StatsBar component for metrics display
- Improved component architecture with semantic HTML
- Enhanced CSS with modern techniques (CSS Grid, Flexbox)
- Updated documentation to reflect all changes

📱 Responsive Design:
- Mobile-first approach with breakpoint optimization
- Adaptive layout for all screen sizes
- Optimized touch interactions

♿ Accessibility:
- Semantic HTML structure
- ARIA labels for screen readers
- Keyboard navigation support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>GitHub Repository Explorer | React Query + Zustand</title>
+    <meta name="description" content="A modern React application showcasing GitHub repositories with React Query and Zustand state management" />
   </head>
   <body>
     <div id="root"></div>
